# rosbagkit

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  data_mining.rviz  environment.yaml  environment.yml  get_global_3d_bbox_debug.py  images.txt  pyproject.toml  run_all.sh  run_docker.sh  setup.py  visualize_coda_object_rviz.py  visualize_img_bbox.py
backup/: add_poses.py  asdf.py  convert_map_2d.py  generate_dataset_yolo.py  geometry_prev.py  get_global_bbox_3d.py  get_instance_bbox_2d.py  get_instance_id_from_2d_bbox.py  get_keyframe_poses.py  object_image_cropper.py  object_mapper.py  publish_comp_data.py  publish_pointcloud.py  segment_bbox.py  visualize_coda_rviz.py
bash_scripts/LiDAR-Inertial-Odometry/: run_fast_lio_coda.sh  run_fast_lio_wanda.sh  run_point_lio_coda.sh  run_point_lio_crl_rzr.sh  run_point_lio_wanda.sh
bash_scripts/bagfile_extraction/: extract_images_crl_rzr.sh  extract_images_wanda.sh  extract_params_crl_rzr.sh  extract_params_wanda.sh
bash_scripts/calibration/: direct_visual_lidar_calibration.sh
bash_scripts/depth_generation/: generate_depth_coda_py.sh  generate_depth_wanda.sh  generate_depth_wanda_py.sh
bash_scripts/miscellaneous/: resize_images_coda.sh
bash_scripts/pointcloud_compensation/: compensate_pointcloud_coda.sh  compensate_pointcloud_crl_rzr.sh  compensate_pointcloud_wanda.sh  publish_comp_coda.sh  publish_comp_wanda.sh
bash_scripts/pointcloud_registration/: gicp_coda.sh  gicp_wanda.sh
bash_scripts/static_map_generation/: generate_static_map_wanda.sh
bash_scripts/synchronization/: sync_cam_pose_wanda.sh
config/: GQ_bagfiles_config_0125.yaml  GQ_bagfiles_config_2408.yaml  GQ_bagfiles_config_2501.yaml
config/extract/: UT-SARA-GQ.yaml  alphatruck.yaml  arl_bluebonnet.yaml  arl_lonebot.yaml  arl_lonebot_eastwood.yaml  arl_lonebot_onioncreek.yaml  arl_lonebot_pickle.yaml  jackal_ahg_courtyard.yaml  tartandrive2.yaml
config/release/: UT-SARA-GQ-public.yaml
datasets/CODa/: coda_dataset.py  coda_utils.py  constants.py
depth_generation/: .clang-format  CMakeLists.txt  Makefile
depth_generation/examples/: generate_depth_stereo_wanda.cpp
depth_generation/include/: generate_depth_stereo.h
depth_generation/include/utils/: camera.hpp  depth.hpp  indicators.hpp  pointcloud.hpp  projection.hpp
depth_generation/src/: generate_depth_stereo.cpp
docker/: Dockerfile
helpers/: coda_utils.py  geometry.py  image_utils.py  math_utils.py  msg_converter.py  ros_utils.py  ros_visualization.py  ros_viz_utils.py
helpers/tests/: test_geometry.py  test_image_utils.py
interpolation/: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  interpolate_keyframes.cpp  keyframe_dense_interp.sh  poses_inekf_interp.sh
interpolation/include/factors/: relative_pose_3d_factor.h
interpolation/include/manif/impl/: lie_group_base.h  tangent_base.h
interpolation/include/types/: pose_3d.h
interpolation/include/utils/: read_pose.h
py_scripts/: compensate_pointcloud_coda.py  decode_packet.py  get_annotations_2d.py  get_global_instance_3d.py  get_keyframe_poses.py  publish_3d_bbox.py  synchronize_poses.py
py_scripts/annotations/: get_global_ellipsoid_coda.py  visualize_global_ellipsoid_coda.py
py_scripts/bagfile_extraction/: extract_camera_info.py  extract_images.py  extract_tf.py
py_scripts/depth_generation/: generate_depth_coda.py  generate_depth_wanda.py
py_scripts/interactive_slam/: convert_map_format.py  convert_odom_format.py  delete_edge_map.py
py_scripts/miscellaneous/: decode_packet.py  disparity_tuner.py  resize_images.py
py_scripts/pointcloud_compensation/: compensate_pointcloud_bagfile.py  compensate_pointcloud_coda.py
py_scripts/pointcloud_registration/: gicp.py
py_scripts/publish_data/: publish_comp_coda.py  publish_comp_wanda.py  publish_compensated_data.py  publish_poses.py  publish_raw_coda.py  publish_raw_data.py  thread_modules.py
py_scripts/static_map_generation/: generate_static_map_wanda.py
py_scripts/synchronization/: sync_cam_pose_wanda.py
rviz/: get_3d_bbox.rviz  get_instance_bbox_2d.rviz  localize_in_map.rviz  publish_comp_data.rviz  publish_poses.rviz
scripts/: check_statistics.py  convert_map_2d.py  densify_poses.py  downsample_pcd.py  extract_bagfile.py  extract_camera_info.py  extract_tf.py  get_annotations_2d.py  get_global_3d_bbox.py  get_global_bbox_3d.py  get_global_instance_3d.py  get_instance_bbox_2d.py  get_instance_id_from_2d_bbox.py  get_keyframe_poses.py  publish_comp_data.py  publish_pcd.py  publish_raw_data.py  release_bagfile.py  synchronize_poses.py
src/: get_annotations_2d.py
trajectory_optimization/: CMakeLists.txt  interpolate_keyframes.cpp
trajectory_optimization/include/types/: relative_pose_3d.h
trajectory_optimization/scripts/: keyframe_dense_interp.sh  optimize_coda.sh
utils/: camera.py  coda_utils.py  depth.py  geometry.py  image.py  image_utils.py  lie_math.py  math_utils.py  msg_converter.py  pose_interpolator.py  projection.py  ros_utils.py  ros_viz_utils.py  visualization.py
(+177 files in other folders)
